# tap-oracle

./: CHANGELOG.md  Pipfile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: veracode-static-scan.yml
tap_oracle/: __init__.py  db.py
tap_oracle/sync_strategies/: common.py  full_table.py  incremental.py
