[tool.poetry]
name = "tap-oracle"
version = "0.3.3"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "~3.7"
singer-python = "~5.3.1"
cx_Oracle = "~6.1"
strict-rfc3339 = "~0.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
